Fixed support for dark mode

--- a/src/options.scss
+++ b/src/options.scss
@@ -79,6 +79,7 @@ body {
         --mdc-theme-surface: #292A2D;
         --mdc-theme-text-primary-on-background: #e8eaed;
         --mdc-theme-text-secondary-on-background: #9aa0a6;
+        --mdc-theme-text-hint-on-background: rgba(255, 255, 255, 0.38);
     }
 
     .mdc-radio {
